--- a/.github/workflows/pull-request-comment.yaml
+++ b/.github/workflows/pull-request-comment.yaml
@@ -1,4 +1,4 @@
-name: Greeting from Mona
+name: Pull Request Comment
 
 on:
   issue_comment:
@@ -6,6 +6,7 @@ on:
 
 jobs:
   one:
+    if: github.event.issue.pull_request
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
